corpus/operators.txt
=====
not
=====

def main(): Bool = not false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (unary
      (boolean))))

=====
unary minus
=====

def main(): Int32 = -1

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (unary
      (integer))))

=====
and
=====

def main(): Bool = true and false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (boolean)
      (boolean))))

=====
or
=====

def main(): Bool = true or false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (boolean)
      (boolean))))

=====
bitwise or
=====

def main(): Bool = 1 ||| 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (integer))))

=====
bitwise xor
=====

def main(): Int32 = 1 ^^^ 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (integer))))

=====
bitwise and
=====

def main(): Int32 = 1 &&& 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (integer))))

=====
equality
=====

def main(): Bool = 1 != 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (integer))))

=====
comparison
=====

def main(): Bool = 1 <= 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (integer))))

=====
bitwise shift
=====

def main(): Bool = 1 <<< 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (integer))))

=====
multiply
=====

def main(): Int32 = 1 * 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (integer))))

=====
plus
=====

def main(): Int32 = 1 + 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (integer))))

=====
modulu
=====

def main(): Int32 = 1 mod 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (integer))))

=====
remainder
=====

def main(): Int32 = 1 rem 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (integer))))

=====
power
=====

def main(): Int32 = 1 ** 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (integer))))

=====
unary precedence
=====

def main(): Bool = not true and false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (unary
        (boolean))
      (boolean))))

=====
binary precedence
=====

def main(): Int32 = 1 + 2 * true

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (integer)
      (binary
        (integer)
        (boolean)))))

=====
user defined operator
=====

def main(): Int32 = true |> false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (boolean)
      (user_operator)
      (boolean))))

=====
composition
=====

def main(): Int32 = true <+> false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (boolean)
      (boolean))))

=====
infix function
=====

def main(): Int32 = true `my_func` false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (binary
      (boolean)
      (infix_function
       (identifier))
      (boolean))))

=====
cons
=====

def main(): List[Int32] = 1 :: 2 :: Nil

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type
      (identifier)
      (type_arguments
        (type_primitive)))
    (binary
      (binary
        (integer)
        (integer))
      (nil))))

=====
append
=====

def main(): List[Int32] = 1 :: Nil ::: 2 :: Nil

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type
      (identifier)
      (type_arguments
        (type_primitive)))
    (binary
      (binary
        (integer)
        (nil))
      (binary
        (integer)
        (nil))
    )))
